# cnn-plays-lunar-lander

./: .gitignore  README.md  README.zh-CN.md  models.py  pyproject.toml  requirements.txt  train.py
configs/: config.py  smoke.yaml  temporal_resnet_gru.yaml  transformer.yaml
