[project]
name = "cnn-plays-lunar-lander"
version = "0.2.0"
description = "Vision-based PPO for Gymnasium LunarLander-v3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[box2d]>=1.2.2",
    "mlflow>=3.0",
    "numpy>=1.26",
    "opencv-python>=4.12",
    "pyyaml>=6.0",
    "torch>=2.7",
    "torchvision>=0.22",
]
